Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/015_function_missing_return_if.xi
f(x:bool):int
{
    if (x) {
    }
}
//@PRACOWNIA
//@should_not_typecheck
